[package]
name = "lwuri"
version = "0.1.1"
authors = ["Robert Quattlebaum <robert@voria.com>"]
edition = "2021"
description = "Crate for using and manipulating Uniform Resource Identifiers with a minimal memory footprint and strong typing."
repository = "https://github.com/voria/rust-lwuri"
documentation = "https://docs.rs/lwuri/"
keywords = ["uri","parser","url"]
categories = ["parser-implementations","web-programming"]
license = "Apache-2.0"
readme = "README.md"

[features]
default = ["std"]
std = ["alloc"]
alloc = []
serde = ["dep:serde", "alloc"]

[dependencies]
lwuri-macros = { path = "proc-macros", version = "0.1.1" }
heapless = "0.8"
serde = { version = "1", optional = true, default-features = false, features = ["alloc"] }

[dev-dependencies]
serde_json = "1"
