[package]
name = "lwuri-macros"
version = "0.1.1"
authors = ["Robert Quattlebaum <robert@voria.com>"]
edition = "2021"
description = "Crate providing proc-macros for the `lwuri` crate."
repository = "https://github.com/vorialabs/lwuri"
documentation = "https://docs.rs/lwuri/"
license = "Apache-2.0"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = "2"
quote = "1"
regex = "1.1"
